--- a/dbConfig.json
+++ b/dbConfig.json
@@ -1,3 +1,4 @@
 {
-    "unsplashKey": "uq_2duZqqESMA4q5PTJzLVT5UVEeFRUspMAn_16rgU8"
+    "unsplashKey": "uq_2duZqqESMA4q5PTJzLVT5UVEeFRUspMAn_16rgU8",
+    "test":"123"
   }
