--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
-    "unsplash-js": "^7.0.18"
-  }
+    "unsplash-js": "^7.0.18",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {}
 }
