--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "unsplash-js": "^7.0.18",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {}
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
+  }
 }
