--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "startup",
-  "version": "1.0.0",
-  "description": "## Description deliverable",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "vite": "^4.3.9"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "mongodb": "^5.6.0",
-    "unsplash-js": "^7.0.18",
-    "uuid": "^9.0.0",
-    "ws": "^8.13.0"
+    "bootstrap": "^5.3.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0"
   }
 }
